@@ -73,7 +73,8 @@ MOD.ThroneL = {
 	Mod = MOD,
 	Level = "??",
 	Active = false,
-	Name = MOD.Lang.Unit.ThroneL[KBM.Lang],
+	DisplayName = MOD.Lang.Unit.ThroneL[KBM.Lang],
+	Name = MOD.Lang.Unit.Throne[KBM.Lang],
 	NameShort = MOD.Lang.Unit.AndShort[KBM.Lang],
 	Menu = {},
 	Castbar = nil,
@@ -92,7 +93,8 @@ MOD.ThroneR = {
 	Mod = MOD,
 	Level = "??",
 	Active = false,
-	Name = MOD.Lang.Unit.ThroneR[KBM.Lang],
+	DisplayName = MOD.Lang.Unit.ThroneR[KBM.Lang],
+	Name = MOD.Lang.Unit.Throne[KBM.Lang],
 	NameShort = MOD.Lang.Unit.AndShort[KBM.Lang],
 	Menu = {},
 	Castbar = nil,
